# swagger.json
@@ -16,16 +16,33 @@
       "post": {
         "tags": ["User"],
         "requestBody": {
+          "required": true,
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
                 "type": "object",
+                "required": ["email", "password", "name"],
                 "properties": {
-                  "email": { "type": "string" },
-                  "password": { "type": "string" },
-                  "name": { "type": "string" }
-                },
-                "required": ["email", "password", "name"]
+                  "email": {
+                    "type": "string",
+                    "format": "email",
+                    "description": "The user's email."
+                  },
+                  "password": {
+                    "type": "string",
+                    "format": "password",
+                    "description": "The user's password."
+                  },
+                  "name": {
+                    "type": "string",
+                    "description": "The user's name."
+                  },
+                  "photo": {
+                    "type": "string",
+                    "format": "binary",
+                    "description": "The user's photo."
+                  }
+                }
               }
             }
           }
@@ -111,15 +128,19 @@
         ],
         "requestBody": {
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
                 "type": "object",
                 "properties": {
                   "email": { "type": "string" },
                   "password": { "type": "string" },
-                  "name": { "type": "string" }
-                },
-                "required": ["email", "password", "name"]
+                  "name": { "type": "string" },
+                  "photo": {
+                    "type": "string",
+                    "format": "binary",
+                    "description": "The user's photo."
+                  }
+                }
               }
             }
           }
@@ -171,6 +192,9 @@
             "type": "string"
           },
           "name": {
+            "type": "string"
+          },
+          "photo": {
             "type": "string"
           },
           "createdAt": {
